--- a/meteor-mail.html
+++ b/meteor-mail.html
@@ -1,14 +1,42 @@
+<!-- simple-todos.html -->
 <head>
-  <title>meteor-mail</title>
+    <title>Todo List</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+<div class="navbar">
+    <header>
+        <h1>Todo List</h1>
+        <!-- add a form below the h1 -->
+        <form class="new-task">
+            <input type ="text" name="text" placeholder="Type to add new tasks" />
+        </form>
+    </header>
 
-  {{> hello}}
+    <ul>
+      {{#each mails}}
+        {{> mail}}
+      {{/each}}
+    </ul>
+
+</div>
+
+<div class="content">
+    <h1>Mail Programm</h1>
+
+</div>
+
+
+<div class="content2">
+    <h2> mail inhalt</h2>
+</div>
 </body>
 
-<template name="hello">
-  <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+<template name="task">
+    <li class="{{#if checked}} checked {{/if}}">
+        <button class="delete">&times;</button>
+        <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
+        <span class="text">{{text}}</span>
+    </li>
+
 </template>
