--- a/meteor-mail.html
+++ b/meteor-mail.html
@@ -8,14 +8,11 @@
     <header>
         <h1>Todo List</h1>
         <!-- add a form below the h1 -->
-        <form class="new-task">
-            <input type ="text" name="text" placeholder="Type to add new tasks" />
-        </form>
     </header>
 
     <ul>
-      {{#each mails}}
-        {{> mail}}
+      {{#each folders}}
+        {{> folder}}
       {{/each}}
     </ul>
 
@@ -32,11 +29,11 @@
 </div>
 </body>
 
-<template name="task">
-    <li class="{{#if checked}} checked {{/if}}">
+<template name="folder">
+    <li>
         <button class="delete">&times;</button>
         <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-        <span class="text">{{text}}</span>
+        <span class="text">{{folder}}</span>
     </li>
 
 </template>
