--- a/meteor-mail.html
+++ b/meteor-mail.html
@@ -31,9 +31,8 @@
 
 <template name="folder">
     <li>
-        <button class="delete">&times;</button>
-        <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-        <span class="text">{{folder}}</span>
+        <button class="delete" value={{this}}>&times;</button>
+        <span class="folderBar">{{this}}</span>
     </li>
 
 </template>
